Updated Nav links to display all pages

--- a/UI/login.html
+++ b/UI/login.html
@@ -14,11 +14,14 @@
  	<nav>
  		<div class="container">
  			<div class="logo">FastFoodFast</div>
- 			<div class="links">
- 				<a href="signup.html">Signup</a>
+  			<div class="links">
+ 				<a href="signup.html">Sign up</a>
  				<a href="admin.html">Admin</a>
+ 				<a href="order_food.html">Order food</a>
+ 				<a href="order_history.html">Order history</a>
+ 				<a href="food_orders.html">Food Orders</a>
  			</div>
- 		</div>
+		</div>
  	</nav>
 
  	<section>
