--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
  				<a href="UI/login.html">Login</a>
  				<a href="UI/signup.html">Sign up</a>
  				<a href="UI/admin.html">Admin</a>
+ 				<a href="UI/login.html">Login</a>
+ 				<a href="UI/signup.html">Sign up</a>
+ 				<a href="UI/admin.html">Admin</a>
+ 				<a href="UI/order_food.html">Order food</a>
+ 				<a href="UI/order_history.html">Order history</a>
+ 				<a href="UI/food_orders.html">Food Orders</a>
+
  			</div>
  		</div>
  	</nav>
