--- a/UI/food_orders.html
+++ b/UI/food_orders.html
@@ -18,6 +18,12 @@
  				<span class="welcome">Welcome</span>
  				<span class="username">Firstname Lastname</span>
  				<a href="logout" class="logout">Logout</a>
+ 				<a href="login.html">Login</a>
+ 				<a href="signup.html">Sign up</a>
+ 				<a href="admin.html">Admin</a>
+ 				<a href="order_food.html">Order food</a>
+ 				<a href="order_history.html">Order history</a>
+
  			</div>
  		</div>
  	</nav>
