--- a/UI/signup.html
+++ b/UI/signup.html
@@ -17,6 +17,9 @@
  			<div class="links">
  				<a href="login.html">Login</a>
  				<a href="admin.html">Admin</a>
+ 				<a href="order_food.html">Order food</a>
+ 				<a href="order_history.html">Order history</a>
+ 				<a href="food_orders.html">Food Orders</a>
  			</div>
  		</div>
  	</nav>
