--- a/UI/admin.html
+++ b/UI/admin.html
@@ -14,6 +14,10 @@
  	<nav>
  		<div class="container">
  			<div class="logo">FastFoodFast</div>
+ 			<div class="links">
+ 				<a href="food_orders.html">Food Orders</a>
+ 			</div>
+
  		</div>
  	</nav>
 
