--- a/UI/login.html
+++ b/UI/login.html
@@ -13,12 +13,13 @@
  <body>
  	<nav>
  		<div class="container">
- 			<div class="logo">FastFoodFast</div>
-  			<div class="links">
- 				<a href="order_food.html">Order food</a>
- 				<a href="order_history.html">Order history</a>
+ 			<div class="logo"><img src="img/fff.png"></div>
+			<div class="links">
+ 				<a href="signup.html">SIGNUP</a>
  			</div>
-		</div>
+ 		</div>
+		 	
+
  	</nav>
 
  	<section>
