--- a/UI/signup.html
+++ b/UI/signup.html
@@ -13,11 +13,9 @@
  <body>
  	<nav>
  		<div class="container">
- 			<div class="logo">FastFoodFast</div>
+ 			<div class="logo"><img src="img/fff.png"></div>
  			<div class="links">
- 				<a href="login.html">Login</a>
- 				<a href="order_food.html">Order food</a>
- 				<a href="order_history.html">Order history</a>
+ 				<a href="login.html">LOG IN</a>
  			</div>
  		</div>
  	</nav>
