--- a/index.html
+++ b/index.html
@@ -10,18 +10,13 @@
  </head>
  
 
- <body>
+ <body class="purple">
  	<nav>
  		<div class="container">
- 			<div class="logo">FastFoodFast</div>
+ 			<div class="logo"><img src="UI/img/fff.png"></div>
  			<div class="links">
- 				<a href="UI/login.html">Login</a>
- 				<a href="UI/signup.html">Sign up</a>
- 				<a href="UI/admin.html">Admin</a>
- 				<a href="UI/order_food.html">Order food</a>
- 				<a href="UI/order_history.html">Order history</a>
- 				<a href="UI/food_orders.html">Food Orders</a>
-
+ 				<a href="UI/login.html">LOGIN</a>
+ 				<a href="UI/signup.html">SIGN UP</a>
  			</div>
  		</div>
  	</nav>
@@ -31,11 +26,11 @@
  	<section class="home">
  		<div class="container">
  			<div class="home-title">
- 				<h1>Fast Food Fast</h1>
+ 				<h1>HOW FAST DO YOU WANT YOUR FOOD?</h1>
  				<p>Fast-Food-Fast is a food delivery service app for a restaurant.</p>
  			</div>
  			<div class="home-img">
- 				<img src="UI/img/food_grid.png">
+ 				<img src="UI/img/food.png">
  			</div>
  		</div>
  	</section>
