Implement fetch api for signup

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -23,17 +23,20 @@
  	<section>
  		<div class="container">
  			<div class="form-group">
+ 				<div id="error"></div>
+ 				<div id="success"></div>
  				<h1>Sign up</h1>
- 				<form action="" method="post">
- 					<input type="email" name="email" placeholder="Email">
- 					<input type="text" name="firstname" placeholder="Firstname">
- 					<input type="text" name="lastname" placeholder="Lastname">
- 					<input type="password" name="password" placeholder="Password">
- 					<input type="submit" name="submit" value="Signup">
+ 				<form action="" method="post" name="signup">
+ 					<input type="email" name="email" placeholder="Email" id="email" required="required">
+ 					<input type="text" name="firstname" placeholder="Firstname" required="required">
+ 					<input type="text" name="lastname" placeholder="Lastname" required="required">
+ 					<input type="password" name="password" placeholder="Password" required="required">
+ 					<input type="submit" name="submit" id="submit" value="Signup">
  				</form>
  			</div>
  		</div>
  	</section>
+ 	<script src="js/signup.js"></script>
 
  </body>
 
