Add cookies.js file

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -26,7 +26,7 @@
  				<div id="error"></div>
  				<div id="success"></div>
  				<h1>Sign up</h1>
- 				<form action="" method="post" name="signup">
+ 				<form action="https://jessam.herokuapp.com/api/v1/auth/signup" method="post" name="signup">
  					<input type="email" name="email" placeholder="Email" id="email" required="required">
  					<input type="text" name="firstname" placeholder="Firstname" required="required">
  					<input type="text" name="lastname" placeholder="Lastname" required="required">
