--- a/UI/order_food.html
+++ b/UI/order_food.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
  	<title>FastFoodFast - Order Food</title>
- 	<script src="js/order_food.js"></script>
+ 	<script src="js/cookies.js"></script>
  	<link rel="stylesheet" href="css/style.css">
 
  </head>
