--- a/UI/login.html
+++ b/UI/login.html
@@ -25,15 +25,19 @@
  	<section>
  		<div class="container">
  			<div class="form-group">
+ 				<div id="error"></div>
+ 				<div id="success"></div>
  				<h1>Log in</h1>
- 				<form action="" method="post">
+ 				<form action="https://jessam.herokuapp.com/api/v1/auth/login" method="post" name="login">
  					<input type="email" name="email" placeholder="Email">
  					<input type="password" name="password" placeholder="Password">
- 					<input type="submit" name="submit" value="Log in">
+ 					<input type="submit" id="submit" name="submit" value="Log in">
  				</form>
  			</div>
  		</div>
  	</section>
+ 	<script src="js/login.js"></script>
+
 
  </body>
 
