Add features for food orders and logout

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -13,7 +13,7 @@
  <body>
  	<nav>
  		<div class="container">
- 			<div class="logo"><img src="img/fff.png"></div>
+ 			<div class="logo">FastFoodFast</div>
  			<div class="links">
  				<a href="login.html">LOG IN</a>
  			</div>
@@ -36,6 +36,7 @@
  			</div>
  		</div>
  	</section>
+ 	<script src="js/general.js"></script>
  	<script src="js/signup.js"></script>
 
  </body>
