--- a/UI/login.html
+++ b/UI/login.html
@@ -13,7 +13,7 @@
  <body>
  	<nav>
  		<div class="container">
- 			<div class="logo"><img src="img/fff.png"></div>
+ 			<div class="logo">FastFoodFast</div>
 			<div class="links">
  				<a href="signup.html">SIGNUP</a>
  			</div>
@@ -36,6 +36,7 @@
  			</div>
  		</div>
  	</section>
+ 	<script src="js/general.js"></script>
  	<script src="js/login.js"></script>
 
 
