--- a/UI/order_food.html
+++ b/UI/order_food.html
@@ -7,6 +7,9 @@
  	<title>FastFoodFast - Order Food</title>
  	<link rel="stylesheet" href="css/style.css">
  	<script src="js/cookies.js"></script>
+ 	<script src="js/menu.js"></script>
+  	<script src="js/user.js"></script>
+
 
  </head>
  
@@ -16,10 +19,9 @@
  		<div class="container">
  			<div class="logo">FastFoodFast</div>
  			<div class="links">
- 				<span class="welcome">Welcome</span>
- 				<span class="username">Firstname Lastname</span>
- 				<a href="logout">Logout</a>
+ 				<span class="username" id="username"></span>
  				<a href="order_history.html">Order history</a>
+ 				<a href="logout.html" class="logout">Logout</a>
 
  			</div>
  		</div>
@@ -41,6 +43,11 @@
 
  		</div>
  	</section>
+ 	<section class="admin">
+ 		<a href="food_orders.html">Administrator</a>
+ 	</section>
+
+ 	<script src="js/general.js"></script>
  	<script src="js/order_food.js"></script>
 
  </body>
