--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <body class="purple">
  	<nav>
  		<div class="container">
- 			<div class="logo"><img src="UI/img/fff.png"></div>
+ 			<div class="logo">FastFoodFast</div>
  			<div class="links">
  				<a href="UI/login.html">LOGIN</a>
  				<a href="UI/signup.html">SIGN UP</a>
