Edit order history page

--- a/UI/order_history.html
+++ b/UI/order_history.html
@@ -6,6 +6,7 @@
     
  	<title>FastFoodFast - Order history</title>
  	<link rel="stylesheet" href="css/style.css">
+  	<script src="js/cookies.js"></script>
   	<script src="js/menu.js"></script>
  	<script src="js/user.js"></script>
 
@@ -40,10 +41,10 @@
 
  		</div>
  	</section>
- 	<section>
+ 	<section class="admin">
  		<a href="food_orders.html">Administrator</a>
  	</section>
- 	<script src="js/general.js"></script>
+	<script src="js/general.js"></script>
  	<script src="js/order_history.js"></script>
 
  </body>
