--- a/UI/food_orders.html
+++ b/UI/food_orders.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
  	<title>FastFoodFast - Food orders</title>
+ 	<script src="js/cookies.js"></script>
  	<script src="js/menu.js"></script>
  	<script src="js/user.js"></script>
  	<link rel="stylesheet" href="css/style.css">
