--- a/UI/login.html
+++ b/UI/login.html
@@ -28,7 +28,7 @@
  				<div id="error"></div>
  				<div id="success"></div>
  				<h1>Log in</h1>
- 				<form action="#" method="post" name="login">
+ 				<form action="" method="post" name="login">
  					<input type="email" name="email" placeholder="Email">
  					<input type="password" name="password" placeholder="Password">
  					<input type="submit" id="submit" name="submit" value="Log in">
